Add sound to last seconds. Add color to background to indicate rest/work.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-switch": "^5.0.1",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
